# krizovky

./: AGENTS.md  README.md  pyproject.toml
config/: settings.py  urls.py
crossword_answers/: apps.py  checks.py  forms.py  models.py  tests.py  tests_config.py  urls.py  views.py
crossword_answers/migrations/: 0001_initial.py  0003_tajenka_source_url.py
crossword_answers/templates/crossword_answers/: answer_confirm_delete.html  answer_detail.html  answer_form.html  answer_list.html  source_url_confirm_delete.html  source_url_form.html  source_url_list.html
docs/: project-overview.md  user-stories.md
krizovky/: apps.py  checks.py  forms.py  models.py  source_import.py  tests.py  tests_config.py  tests_source_import.py  urls.py  views.py
krizovky/migrations/: 0005_rename_models_to_english.py  0006_make_source_url_optional.py  0007_add_soft_delete.py  0008_rename_deleted_at_to_hidden_at.py
krizovky/templates/krizovky/: answer_confirm_delete.html  answer_confirm_hide.html  answer_detail.html  answer_form.html  answer_list.html  source_url_confirm_delete.html  source_url_confirm_hide.html  source_url_form.html  source_url_list.html
src/krizovky/: __init__.py
tajenky/: apps.py  checks.py  forms.py  models.py  openai_client.py  tests.py  tests_config.py  tests_openai.py  urls.py  views.py
tajenky/migrations/: 0002_remove_tajenka_popis.py  0004_split_source_url_model.py
tajenky/templates/tajenky/: tajenka_confirm_delete.html  tajenka_detail.html  tajenka_form.html  tajenka_list.html
templates/: base.html
