[project]
name = "krizovky"
version = "0.1.0"
description = "Křížovky"
authors = [
    {name = "Glutexo",email = "glutexo@icloud.com"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "django (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [{ include = "krizovky", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
